removed unnecessary generic arg
* also: sonarqube issues